--- a/views/generate.ejs
+++ b/views/generate.ejs
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrollSkogen AB - My account</title>
+    <title>TrollSkogen AB - Generator</title>
 </head>
 <body>
-    <h1>I'm me</h1>
-    <p><%= email %></p>
-    
+    <h1>New account</h1>
 </body>
 </html>
