--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/stylesheet.css">
-    <title>Fuskeluring AB</title>
+    <title>TrollSkogen AB</title>
 </head>
 <body>
     <h1>Soy un troll</h1>
