--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="/css/stylesheet.css">
     <title>TrollSkogen AB</title>
 </head>
+
 <body>
-    <h1>Soy un troll</h1>
+    <h1>Welcome to the forest of trolls</h1>
 </body>
+
 </html>
